[package]
name = "quexec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true


[dependencies]
anyhow = "*"
tokio = { version = "1", features = ["io-util","process","rt","fs","time","sync"] }
clap = { version = "3.2", features = ["derive"] }